# RPiDynamicAudioPlatform

./: BOM.csv  CMakeLists.txt  README.md  RecordedAudioSetups.txt  WebsocketChatApp.html  app.py
3Dprinting/: 3MPlatformV3.stl  micStandMountV2.stl  picaseV2.ipt  picaseV2lid.ipt
include/: RtAudio.h
lib/: librtaudio.la  libwiringPiPca9685.so.2.0
output/: 2018_03_31.loc0_o0.raw  2018_03_31.loc0_o1.raw  2018_06_01.loc0_o0.raw  2018_06_04.loc0_o0.raw  2018_06_05.loc0_o0.raw  2018_06_12.loc0_o0.raw  2018_06_26.loc0_o0.raw  2018_06_27.loc0_o0.raw  2018_07_04.program0.raw  2018_07_12.program0.raw  2018_07_13.program0.raw  2018_07_15.program0.raw  2018_07_16.program0.raw  2018_07_17.program0.raw  2018_07_26.program0.raw  location1.raw
sikoraExamples/: list.txt
src/: CMakeLists.txt  audioPlatform.cpp  audioPlatformv2.cpp  audioPlatformv2.h  calibrate.c  callbacktest.cpp  main.c  record.cpp  servoDemo.cpp  sine.cpp  threshold.cpp
src/tests/: duplex.cpp  threshold.cpp
